--- a/scss/_elementMixins.scss
+++ b/scss/_elementMixins.scss
@@ -15,6 +15,42 @@
 }
 
 
+// Mixin generates the styling for the actions buttons in file uploads
+@mixin ss-uploadfield-action-buttons{
+	.ss-ui-button {
+		background: none;
+		border: 0;
+		@include box-shadow(none);
+		@include text-shadow(none);
+		color: $color-text-light;
+		float: right;
+		
+		&.ss-uploadfield-item-delete {
+			// TODO tmp hack until we have permissions and can disable delete
+			display: none;
+		}
+		&.ss-uploadfield-item-cancel{
+
+			@include border-radius(0);
+			border-left:1px solid rgba(#fff, 0.2);
+			margin-top:3px;			
+			cursor: pointer;
+			opacity:0.9;
+			&:hover{
+				opacity:1;
+			}
+			.ui-icon {
+			  display: block;
+			  margin: 0;
+			  position:realtive;
+			  top:4px;
+			}
+	
+		}				
+		@include ss-uploadfield-editButton;
+	}
+}
+
 //**
 //	Mixin creates a transparent button with a dropdown arrow, 
 //	as is used for files in the files up-load area. The arrows 
